fixed spacing at top of mobile nav menu

--- a/Blocks/src/Navigation/style.scss
+++ b/Blocks/src/Navigation/style.scss
@@ -306,7 +306,7 @@
 		z-index: 1000;
 		padding-top: 1rem;
 		box-sizing: border-box;
-		margin-block-start: 3rem !important;
+		margin-block-start: 2rem !important;
 		padding-bottom: 5rem;
 		border-bottom: solid 3px #00000096;
 
